# motion-analysis

./: .gitignore  README.md  UKF6DoF.py  requirements.txt  run_full_track.sh  setup.cfg  track_job.py  vehicle_image_generation.py  vehicle_track.py
.github/workflows/: develop.yaml
docs/: block_diagram.drawio  motiontrack_diagram  motiontrack_diagram.drawio
examples/drop_example/: analysis.py  initialisation.py  plot_P.py  tracker_spin_const_acc.py
examples/track_3DoF/: tracker_efk.py  tracker_ukf.py
examples/track_6DoF/: conversions.py  tracker_1ob.py  tracker_2ob.py  tracker_ekf.py
examples/track_fake_image_data/: tracker.py
lib/: spatial_match.py  utils.py  vehicle_image_generation.py
src/blobdetect/: README.md
src/camcal/: README.md
src/cv2blobdetector/: README.md  detector.py
src/dynamicsystem/: README.md  __init__.py  system_class.py
src/kalmanfilter/: README.md  ekf.py  process_noise.py  quaternion_operations.py  rts_smoother.py  ukf.py
src/motion_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/motiontrack/: ;w  README.md  UKF.py  blob_data.py  body_projection.py  body_projection_cv.py  camera.py  combine_observables.py  custom_types.py  dynamic_system.py  features.py  geometry.py  geometry_stl.py  observation.py  plot.py  read_data.py  spatial_match [conflicted].py  spatial_match.py  ukf.py  utils.py  vehicle_image_generation.py
test/: README.md
test/1-module-examples/: example_geometry_projection.py
test/dynamicsystem/: test.yaml  test_dynamic_system.py
test/motiontrack/: example_spatial_match.py  (+11 more)
(+837 files in other folders)
