[metadata]
name = motion-analysis
version = 0.0.1
author = Andrew Lock
author_email = andrew.lock@usq.edu.au
description = Optical vehicle motion tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusq-at-usq
project_urls =
    Bug Tracker = https://github.com/tusq-at-usq/vehicle-tracker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
